# viridian-desk

./: .editorconfig  .env  .gitignore  .npmrc  .postcssrc.ts  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: frontend-quality.yml  release.yml
docs/superpowers/plans/: 2026-05-13-frontend-redesign-phase-1.md  2026-05-14-frontend-redesign-phase-2-auth-settings.md  2026-05-14-frontend-redesign-phase-3-workspace.md  2026-05-16-frontend-redesign-phase-3c-application.md  2026-05-16-frontend-redesign-phase-3d-malfunction.md  2026-05-16-frontend-redesign-phase-3e-approval.md  2026-05-16-frontend-redesign-phase-3f-settings.md
docs/superpowers/specs/: 2026-05-13-frontend-redesign-design.md  2026-05-14-frontend-redesign-phase-3-workspace-design.md  2026-05-16-frontend-redesign-phase-3c-application-design.md  2026-05-16-frontend-redesign-phase-3d-malfunction-design.md  2026-05-16-frontend-redesign-phase-3e-approval-design.md  2026-05-16-frontend-redesign-phase-3f-settings-design.md
scripts/: build.sh  check-build-budget.js  check-offline-assets.js  generate-i18n-types.js  generate-metadata.js  parse-changelog.js  public_key.pem  rsa-encrypt.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: ca-cert.pem  client.crt  client.key  root.crt
src-tauri/src/: lib.rs
src-tauri/src/app/: auth.rs  cmd.rs  error.rs  mod.rs  setup.rs  state.rs  task.rs  terminal.rs  updater.rs  ws.rs
src-tauri/src/config/: client.rs  metadata.rs  mod.rs
src-tauri/src/core/: handle.rs  mod.rs  sidecar.rs
src-tauri/src/events/: client.rs  constants.rs  desktop.rs  mod.rs
src-tauri/src/plugins/: awesome.rs  log.rs  mod.rs
src-tauri/src/services/: api.rs  desktop.rs  errors.rs  idle_user.rs  mod.rs  policy.rs  request.rs  shell.rs  types.rs  vapp.rs
src-tauri/src/utils/: base.rs  dirs.rs  help.rs  init.rs  log_setup.rs  mod.rs  network.rs  tools.rs
src-tauri/tests/: Cargo.toml  sidecar_test.rs
src/@types/: global.d.ts  i18next.d.ts  vite-env.d.ts
src/app/: App.tsx  start.tsx
src/app/providers/: app-providers.tsx
src/app/router/: bootstrap.ts  index.tsx  lazy-pages.tsx  route-element.tsx  routes.tsx
src/assets/iconfont/: iconfont.css
src/assets/iconfontColor/: iconfont-color.css
src/assets/js/: wwLogin-1.2.7.js
src/assets/locales/: README.md  en-US.json  zh-CN.json  zh-TW.json
src/components/: Closesvg.tsx  Deskpoolsvg.tsx
src/hooks/: useLoading.ts  useProgressiveItems.ts  useRequest.js  useRequest.ts  useSmsCountdown.ts
src/layouts/: RedesignAppLayout.tsx
src/locales/: en-US.js  zh-CN.js  zh-TW.js
src/native/: file-src.ts  index.ts  interceptor.ts  tauri-globals.ts  utils.ts
src/router/: index.tsx
src/services/: index.ts  invokeServices.ts  public.ts  requestErrorHandler.ts  resource.ts  user.ts
src/store/: index.ts  runtime-access.ts
src/styles/: design-system.css  index.scss  low-power-defaults.scss  performance-tier.scss  redesign.css  scrollbar.scss  theme.scss
src/theme/: antdThemes.ts  themeUtils.ts  useTheme.tsx
src/ui/: confirm.tsx  fast.tsx  icons.tsx  index.tsx  lean-input.tsx  message.scss  message.ts  styles.scss
src/utils/: actionAuth.jsx  actionAuth.tsx  actions.ts  base64.ts  clipboard.ts  common.ts  constant.js  constant.ts  i18n.ts  initLanguage.js  logger.ts  message-format.ts  passwordCrypto.ts  passwordPrefix.ts  performanceTier.ts  permissions.js  regex.ts  requestErrorHandler.jsx  requestErrorHandler.ts  setupLowPowerEditableDefaults.ts  setupViewportScale.ts  utils.jsx  utils.tsx  validate.js  validate.ts  value.ts
tests/e2e/: app-smoke.spec.ts  performance-static.spec.ts
(+592 files in other folders)
