[package]
name = "viridian-desk"
version = "2.0.1"
description = "Secure desktop client for VDI, virtual apps, and remote applications."
authors = ["Alex <zalex2015@hotmail.com>"]
license = ""
repository = ""
default-run = "viridian-desk"
edition = "2021"
rust-version = "1.83"
readme = "README.md"
homepage = "https://viridianstack.com/"
keywords = ["VDI", "Desktop", "remote-desktop", "virtual-apps", "viridian"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
aes = "0.8.4"
anyhow = "1.0.66"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cbc = "0.1.2"
cipher = "0.4.4"
ecb = { version = "0.1.2", features = ["alloc"] }
http = "1.1.0"
ipnetwork = "0.20"
keytar = "0.1.6"
local-ip-address = "0.6.1"
futures = "0.3.30"
mac_address = "1.1.5"
native-tls = "0.2"
once_cell = "1.20.3"
parking_lot = "0.12.3"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["json"] }
regex = "1.10"
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
strum = { version = "0.26", features = ["derive"] }
sys-locale = "0.3.1"
sysinfo = "0.30"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.2"
tauri-plugin-http = { version = "2.5.4", features = ["native-tls", "dangerous-settings"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-websocket = "2.4.1"
thiserror = "2.0.12"
tokio = { version= "1", features = ["full"] }
tokio-util = "0.7.15"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-rolling-file = { version = "0.1.3", features = ["non-blocking"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "local-time"] }
tungstenite = "0.21"
url = "2.5"
uuid = { version = "1.8.0", features = ["v4", "v5", "fast-rng"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"


[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli, you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
test-harness = [ "tauri/test" ]
# When this feature is enabled, the app compiles with thin-client-specific code.
# By default, it's disabled, building a standard ("soft") client.
thin_client = []


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
