[package]
name = "sidecar-tests"
version = "2.0.1"
edition = "2021"
publish = false

[dependencies]
# Point to the main application library to test its code
app-lib = { path = ".." }

# Define test-specific dependencies
tauri = { version = "2.7.0", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
